# MonoCipher

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
MonoCipher/: README.md  __init__.py  cli.py  cli2.py  test.py
MonoCipher/ByteEncryption/: README.md  __init__.py
MonoCipher/HmacEncryption/: README.md  __init__.py
MonoCipher/MacEncryption/: README.md  __init__.py  mac2.py
MonoCipher/NonceEncryption/: README.md  __init__.py
MonoCipher/SaltEncryption/: README.md  __init__.py
MonoCipher/SimpleEncryption/: README.md  __init__.py
Test/: cli_test.py  init.py  test1.py  test2.py
