[tool.poetry]
name = "MyProject"
version = "0.1.3"
description = "A brief description of your project"
authors = ["Rakesh Kanna rakeshkanna0108@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
