[tool.poetry]
name = "MonoCipher"
version = "0.1.4b0"
description = "A package for monoalphabetic ciphers (message encryption and decryption)."
authors = ["Rakesh Kanna <rakeshkanna0108@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rakeshkanna-rk/MonoCipher"
repository = "https://github.com/rakeshkanna-rk/MonoCipher"
keywords = ["encryption", "cryptography", "security"]

[tool.poetry.dependencies]
python = "^3.6"
pycryptodome = "^3.20.0"
click = "^8.1.7"
colorama = "^0.4.6"


[tool.poetry.scripts]
monocipher = "MonoCipher:mc_cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
