[metadata]
name = MonoCipher
version = 0.1.3
author = Rakesh Kanna
author_email = rakeshkanna0108@gmail.com
description = A package for monoalphabetic ciphers (message encryption and decryption).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rakeshkanna-rk/MonoCipher
license = MIT

[options]
packages = find:
install_requires =
    pycryptodome>=3.20.0
    tqdm

[options.entry_points]
console_scripts =
    ShiftEncrypt = MonoCipher.SimpleEncryption:shift_encrypt
    ShiftDecrypt = MonoCipher.SimpleEncryption:shift_decrypt
    ByteEncrypt = MonoCipher.ByteEncryption:byte_encrypt
    ByteDecrypt = MonoCipher.ByteEncryption:byte_decrypt
    SaltEncrypt = MonoCipher.SaltEncryption:salt_encrypt
    SaltDecrypt = MonoCipher.SaltEncryption:salt_decrypt
    HmacEncrypt = MonoCipher.HmacEncryption:hmac_encrypt
    HmacDecrypt = MonoCipher.HmacEncryption:hmac_decrypt
    NonceEncrypt = MonoCipher.NonceEncryption:nonce_encrypt
    NonceDecrypt = MonoCipher.NonceEncryption:nonce_decrypt
    MacEncrypt = MonoCipher.MacEncryption:mac_encrypt
    MacDecrypt = MonoCipher.MacEncryption:mac_decrypt


[options.package_data]
* = *.txt, *.rst

[options.packages.find]
where = src
