[metadata]
name = MonoCipher
version = 0.1.4b0
author = Rakesh Kanna
author_email = rakeshkanna0108@gmail.com
description = A package for monoalphabetic ciphers (message encryption and decryption).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rakeshkanna-rk/MonoCipher
project_urls =
    GitHub = https://github.com/rakeshkanna-rk/MonoCipher/
    PyPI = https://pypi.org/project/MonoCipher/
keywords = encryption, cryptography, security
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pycryptodome>=3.20.0
    click>=8.1.7
    colorama>=0.4.6

[options.entry_points]
console_scripts =
    monocipher = MonoCipher:mc_cli
